opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/sexp_pretty"
bug-reports: "https://github.com/janestreet/sexp_pretty/issues"
dev-repo: "https://github.com/janestreet/sexp_pretty.git"
license: "Apache-2.0"
build: [
["jbuilder" "build-package" "sexp_pretty" "-j" jobs]
]
depends: [
  "base"
  "jbuilder"
  "ppx_base"
  "ppx_driver"
  "sexplib"
  "re"         {>= "1.5.0"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
S-expression pretty-printer

A library for pretty-printing s-expressions, using better indentation rules than
the default pretty printer in Sexplib.
"
