opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/sexp_pretty"
bug-reports: "https://github.com/janestreet/sexp_pretty/issues"
dev-repo: "git+https://github.com/janestreet/sexp_pretty.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_base"
  "sexplib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
  "re"                      {>= "1.5.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
S-expression pretty-printer

A library for pretty-printing s-expressions, using better indentation rules than
the default pretty printer in Sexplib.
"
