opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp_pretty"
bug-reports: "https://github.com/janestreet/sexp_pretty/issues"
dev-repo: "git+https://github.com/janestreet/sexp_pretty.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp_pretty/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "parsexp"
  "ppx_base"
  "sexplib"
  "dune"     {>= "3.17.0"}
  "re"       {= "1.14.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "S-expression pretty-printer"
description: "
A library for pretty-printing s-expressions, using better indentation rules than
the default pretty printer in Sexplib.
"
